--- a/app/assets/stylesheets/depot.css
+++ b/app/assets/stylesheets/depot.css
@@ -153,3 +153,30 @@
   font-weight: bold;
   margin-right: 2em;
 }
+#store .entry form,#store .entry form div{
+  display:inline;
+}
+
+
+.carts {
+  .item_price, .total_line {
+    text-align: right;
+  }
+
+  .total_line .total_cell {
+    font-weight: bold;
+    border-top: 1px solid #595;
+  }
+}
+
+#cart,#cart table{
+  font-size:smaller;
+  color:white;
+
+}
+
+#cart table{
+  border-top:1px dotted #595;
+  border-bottom:1px dotted #959;
+  margin-bottom:10px;
+}
