--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag "scaffold" %>
   <%= stylesheet_link_tag "depot", :media => "all" %><!-- <label id="code.slt"/> -->
 <!-- END:stylesheet -->
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag :application %>
   <%= csrf_meta_tag %><!-- <label id="code.csrf"/> -->
 </head>
 <body id="store">
@@ -16,10 +16,27 @@
   </div>
   <div id="columns">
     <div id="side">
-      <a href="http://www....">Home</a><br />
-      <a href="http://www..../faq">Questions</a><br />
-      <a href="http://www..../news">News</a><br />
-      <a href="http://www..../contact">Contact</a><br />
+    <!-- START_HIGHLIGHT -->
+      <!-- START:hidden_div -->
+<!-- START_HIGHLIGHT -->
+      <% if @cart %>
+<!-- END_HIGHLIGHT -->
+        <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+          <%= render @cart %>
+        <% end %>
+<!-- START_HIGHLIGHT -->
+      <% end %>
+<!-- END_HIGHLIGHT -->
+    <!-- END:hidden_div -->
+
+<!-- END_HIGHLIGHT -->
+      
+     <ul>
+        <li><a href="http://www....">Home</a></li>
+        <li><a href="http://www..../faq">Questions</a></li>
+        <li><a href="http://www..../news">News</a></li>
+        <li><a href="http://www..../contact">Contact</a></li>
+      </ul>
     </div>
     <div id="main">
       <%= yield %><!-- <label id="code.depot.e.include"/> -->
